; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby-require/src/extr_require.c_eval_load_irep.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby-require/src/extr_require.c_eval_load_irep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.RProc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*, i32*)* @eval_load_irep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @eval_load_irep(%struct.TYPE_10__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.RProc*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call %struct.RProc* @mrb_proc_new(%struct.TYPE_10__* %7, i32* %8)
  store %struct.RProc* %9, %struct.RProc** %6, align 8
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @mrb_irep_decref(%struct.TYPE_10__* %10, i32* %11)
  %13 = load %struct.RProc*, %struct.RProc** %6, align 8
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @MRB_PROC_SET_TARGET_CLASS(%struct.RProc* %13, i32 %16)
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %19 = call i32 @mrb_gc_arena_save(%struct.TYPE_10__* %18)
  store i32 %19, i32* %5, align 4
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %21 = load %struct.RProc*, %struct.RProc** %6, align 8
  %22 = call i32 @mrb_obj_value(%struct.RProc* %21)
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %24 = call i32 @mrb_top_self(%struct.TYPE_10__* %23)
  %25 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @mrb_yield_with_class(%struct.TYPE_10__* %20, i32 %22, i32 0, i32* null, i32 %24, i32 %27)
  %29 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %30 = load i32, i32* %5, align 4
  %31 = call i32 @mrb_gc_arena_restore(%struct.TYPE_10__* %29, i32 %30)
  ret void
}

declare dso_local %struct.RProc* @mrb_proc_new(%struct.TYPE_10__*, i32*) #1

declare dso_local i32 @mrb_irep_decref(%struct.TYPE_10__*, i32*) #1

declare dso_local i32 @MRB_PROC_SET_TARGET_CLASS(%struct.RProc*, i32) #1

declare dso_local i32 @mrb_gc_arena_save(%struct.TYPE_10__*) #1

declare dso_local i32 @mrb_yield_with_class(%struct.TYPE_10__*, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @mrb_obj_value(%struct.RProc*) #1

declare dso_local i32 @mrb_top_self(%struct.TYPE_10__*) #1

declare dso_local i32 @mrb_gc_arena_restore(%struct.TYPE_10__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
